[gd_scene load_steps=2 format=3 uid="uid://yj64q0r1ei5c"]

[ext_resource type="Script" path="res://menu/menu.gd" id="1_5w3wn"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_5w3wn")

[node name="Play" type="Button" parent="."]
layout_mode = 0
offset_left = 9.0
offset_top = 5.0
offset_right = 27.0
offset_bottom = 36.0
text = "P"

[node name="Join" type="Button" parent="."]
layout_mode = 0
offset_left = 33.0
offset_top = 5.0
offset_right = 46.0
offset_bottom = 36.0
text = "J"

[node name="Create" type="Button" parent="."]
layout_mode = 0
offset_left = 52.0
offset_top = 5.0
offset_right = 71.0
offset_bottom = 36.0
text = "C"

[connection signal="pressed" from="Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="Create" to="." method="_on_create_pressed"]
